<resources>
    <string name="app_name">Movie Expert</string>
    <string name="splash">Splash Screen Logo</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="copyright">Movie Expert Rights Reserved.</string>
    <string name="copyrightowner">Copyright Louis Michael 2024</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="movie">Movie</string>
    <string name="detailMovie">Detail Movie</string>
    <string name="back">Back</string>
    <string name="darkMode">Dark Mode</string>
    <string name="logout">Logout</string>
</resources>