<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/darkblue"
        app:showAsAction="ifRoom"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon_theme"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:text="@string/darkMode"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_dark_mode" />

            <TextView
                android:id="@+id/tvdarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/darkMode"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/darkblue"
        android:drawableLeft="@drawable/ic_logout"
        android:drawableTint="@color/white"
        android:padding="12dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_theme"
        tools:ignore="RtlHardcoded,VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrightowner"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
